<resources>
    <string name="app_name">GoogleAssigment_Test</string>
    <string name="title_activity_maps">Map</string>
    <string name="capture_location">Capture Location</string>
    <string name="search">Search</string>
    <string name="sort_code">Sort Code</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="time">Time</string>

</resources>
